bppackaging/src/objects/Vendor_Receiving_Group__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needed_By__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Needed By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Unit__c</fullName>
        <label>Package Unit</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Vendor Receiving Group Parts</relationshipLabel>
        <relationshipName>Vendor_Receiving_Group_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recieved__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Recieved</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Receiving_Header__c</fullName>
        <label>Vendor Receiving Header</label>
        <referenceTo>Vendor_Receiving_Header__c</referenceTo>
        <relationshipLabel>Vendor Receiving Groups</relationshipLabel>
        <relationshipName>Vendor_Receiving_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Vendor Receiving Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vendor_Receiving_Header__c</columns>
        <columns>Cost__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VG-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Receiving Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>